--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,13 @@ steps:
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: $(displayName)
+
+- task: GithubRelease@0 
+  displayName: 'Create GitHub Release'      
+  inputs:
+    githubConnection: menthays
+    repositoryName: menthays/electron-azure-pipelines
+    tagSource: manual
+    tag: $(Build.BuildNumber)      
+    assets: |
+         $(Build.ArtifactStagingDirectory)/*
